<resources>
    <string name="app_name">ObenZh</string>
    <string name="ok">好</string>

    <string name="Network_Error">失败</string>
    <string name="unauthorized_toast">
        我们遇到了一个网络故障。我们现在已经成功保存了你们之前做的，你们现在可以继续工作了。我们对给你们带来的任何不便感到抱歉。
    </string>
    <string name="exit_message_str">您所有的录音都已经保存。您可以随时返回并继续录音。</string>
    <string name="Grant_necessary_permissions">Please go to app settings and grant all necessary permissions.</string>
    <string name="permissions_not_granted">权限是不批。</string>

    <!-- String Resources for Login Activity -->
    <string name="Please_Login">请登录</string>
    <string name="Email">Email</string>
    <string name="Password">密码</string>
    <string name="Login">登錄</string>
    <string name="Empty_Email">請填寫此領域</string>
    <string name="Empty_Password">請填寫此領域</string>
    <string name="Invalid_Email">電子郵件格式必須是：abc@abc.com</string>

    <!-- String Resources for Profile Activity -->
    <string name="Your_Profile">个人资料</string>
    <string name="Logout">注销</string>
    <string name="Setup_Your_Avatar">设置声音档案</string>
    <string name="User_ID">用户名</string>
    <string name="Avatar_ID">声音档案ID</string>
    <string name="Regular_Avatar_ID">Regular Avatar ID</string>
    <string name="Commercial_Avatar_ID">Commercial Avatar ID</string>
    <string name="Freestyle_Avatar_ID">Freestyle Avatar ID</string>

    <!-- String Resources for Option Activity -->
    <string name="Cancel">Cancel</string>
    <string name="Regular">Regular</string>
    <string name="Commercial">Commercial</string>
    <string name="Freestyle">Freestyle</string>

    <!-- String Resources for Regular Activity -->
    <string name="cancelButtonStr">保存并退出</string>
    <string name="Hear_Sample">Hear Sample</string>
    <string name="LISTEN">试听</string>
    <string name="REC">录音</string>
    <string name="STOP">停止</string>
    <string name="Keep_Recording">继续录音</string>

    <!-- String Resources for FreeStyle Activity -->
    <string name="startRecording">轻触按钮开始录制。</string>
    <string name="stopRecording">触摸按钮停止录制。</string>
</resources>
