<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/hearSampleBtn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/button_border"
            android:text="@string/Hear_Sample"
            android:textColor="@color/oben_blue"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/recBtn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_border_red"
            android:text="@string/REC"
            android:textColor="@color/colorRed"
            android:textSize="12sp" />

        <Button
            android:id="@+id/listenBtn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/recBtn"
            android:layout_toStartOf="@+id/recBtn"
            android:background="@drawable/button_border_black"
            android:text="@string/LISTEN"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>