<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext">

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancelButtonStr"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#008DFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/start_recording_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_image_mic_blue" />

        <TextView
            android:id="@+id/status_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/startRecording"
            android:textColor="#000000"
            android:textSize="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStart"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:progress="@android:integer/config_mediumAnimTime"
            android:progressDrawable="@drawable/circular_progress_view" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stop_recording_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnStop"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_image_mic_red" />

        <TextView
            android:id="@+id/stop_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/stopRecording"
            android:textColor="#000000"
            android:textSize="20dp" />
    </RelativeLayout>
</RelativeLayout>